--- a/character_references.html
+++ b/character_references.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HOME</title>
+	<title>CHARACTER REFERENCES</title>
 	<link rel="stylesheet" type="text/css" href="char_ref.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -9,10 +9,10 @@
 <body>
 	<div class="menu">	
 		<ul>
-			<li><a href="home.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="contact_information.html">Contact Information</a></li>
 			<li><a href="educational_background.html">Educational Background</a></li>
-			<li><a href="skills&work.html">Skills & Work Experinces</a></li>
+			<li><a href="skills_work.html">Skills & Work Experinces</a></li>
 			<li><a class="active" href="character_references.html">Character References</a></li>
 		</ul>
 	</div>
