add me.jpg in index.html

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 		<h2>I am Gerry T. Guillermo</h2>
 		<p>A Web Developer with 3 year of experience in designing and developing user interfaces, testing, debugging, and training staff within eCommerce technologies. Proven ability in optimizing web functionality that improve data retrieval and work-flow efficiencies.</p>
 	</div>
+	<img src="me.jpg">
 </body>
 </html>
